[web] fix edit text message container
Summary: When I was testing, the new message list ui I noticed a bug with the edit message experience overflowing off the screen. This diff fixes that

Test Plan: Please see the screenshots below

Reviewers:

Subscribers:

--- a/web/chat/edit-text-message.css
+++ b/web/chat/edit-text-message.css
@@ -6,7 +6,7 @@
 }
 
 .backgroundEditMessage {
-  width: 1000px;
+  width: 856px;
 }
 
 .bottomRow {
